# RAG_NLP

./: .env.example  .gitignore  Dockerfile  LICENSE  RAG_BOT-main.code-workspace  README.md  demo_results.md  docker-compose.yml  kehoach.md  kiem_thu_ui.py  pyproject.toml  requirements.txt  run_all_tests.ps1  run_demo_scenarios.py  start_system.ps1  test_api.py  test_q.json  test_results.json  test_ui_custom.py
backend/: __init__.py  main.py
backend/agents/: __init__.py  base_agent.py  dosage_agent.py  drug_info_agent.py  interaction_agent.py  orchestrator.py  safety_agent.py
backend/api/: __init__.py
backend/config/: __init__.py  patient_context_config.yaml  settings.py
backend/models/: __init__.py
backend/policy/: __init__.py  safety_policy_engine.py
backend/rag/: __init__.py  embeddings.py  generator.py  retriever.py  vector_store.py
backend/safety/: __init__.py  evidence_guardrails.py  guardrails.py
backend/services/: __init__.py  (+25 more)
data/: DATA_SOURCE_GAP_ANALYSIS.md  README.md  chat_history.json
docs/: DEFENSE_SCRIPTS.md  DEMO_GUIDE.md  PIPELINE.md  SYSTEM_SNAPSHOT.md  UX_TEST_REPORT.md
frontend/: index.html  package-lock.json  package.json
frontend-next/: README.md  package-lock.json  package.json
output/: baseline_results.json
report/: main.aux  main.fdb_latexmk  main.fls  main.formula  main.lof  main.lot  main.out  main.tex  main.toc  main.xdv
scripts/: annotate_ocr_chunks.py  audit_json_text_quality.py  benchmark_latency.py  build_bm25_index.py  build_chroma_priority_corpus.py  build_rag_corpus.py  collect_canhgiacduoc_articles.py  collect_dav_drugs.py  collect_dav_recalls.py  collect_trungtamthuoc_duocthu.py  count_chunks.py  defense_compare_llm_vs_saferag.py  defense_demo_live_5.py  defense_latency_benchmark.py  defense_ping_kaggle_api.py  defense_run_100_questions.py  demo_chat_flow.py  download_dav_documents.py  eval_submission.py  evaluate_bm25_retrieval.py  evaluate_dataset.py  evaluate_evidence_guardrails.py  evaluate_hybrid_retrieval.py  evaluate_test_questions_safe_rag.py  export_neo4j_graph.py  extract_dav_pdf_chunks.py  generate_rag_testset.py  graph_safety_check.py  hybrid_search_rag.py  ingest_rag_corpus.py  ocr_dav_documents.py  prepare_ddinter_chunks.py  prepare_drug_chunks.py  prepare_otc_condition_guardrails.py  prepare_recall_chunks.py  prepare_safety_article_chunks.py  prepare_trungtamthuoc_duocthu_chunks.py  profile_drug_dataset.py  rag_answer_preview.py  rebuild_dav_processed_from_raw.py  (+9 more)
tests/: conftest.py  test_bug_exploration.py  test_chat_safety_smoke.py  test_confidence_scorer.py  test_conversation_context_service.py  test_core_pipeline.py  test_drug_endpoints.py  test_evidence_guardrails.py  test_hybrid_extractor.py  test_patient_context_merger.py  test_query_expander.py  test_regression_bugs.py
(+136 files in other folders)
